<resources>
    <string name="app_name">Assignment2</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="type_a_message">Type a message</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create New Account</string>
    <string name="add_image">Add Image</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="select_user">select user</string>
    <string name="fullname">Lee Hyo Ri</string>
    <string name="username">hyori1234</string>
    <string name="user_information"></string>
    <string name="gender">Female</string>
    <string name="age">23</string>
    <string name="date_of_birth">13-04-2001</string>
    <string name="mobile">018-2938444</string>
    <string name="course">Finance</string>
    <string name="university">University</string>
    <string name="Gender">Gender</string>
</resources>